# cppex2

./: CMakeLists.txt  InstrumantalSong.cpp  InstrumantalSong.h  InstrumentalSong.cpp  InstrumentalSong.h  LyricalSong.cpp  LyricalSong.h  MIR.cpp  Manager.cpp  Manager.h  Mood.cpp  Mood.h  ReadingSongsTemplate.cpp  Song.cpp  Song.h  parameters.cpp  parameters.h
